packages/parser/test/tokenizer/E0007.txt
'aa'
===== err =====
/test/tokenizer/E0007.txt:1:1: SyntaxError: E0007 - Too many characters in character literal
1 | 'aa'
  | ~~~
